--- a/demo/gantt-with-annotations.html
+++ b/demo/gantt-with-annotations.html
@@ -8,7 +8,7 @@
     <script src="../apexgantt.min.js"></script>
   </head>
   <body>
-    <div id="svg-gantt" style="margin: 0 auto; width: 90%; height: 600px"></div>
+    <div id="svg-gantt" style="margin: 0 auto"></div>
     <script>
       const ganttOptions = {
         series: [
