--- a/demo/gantt-with-interactions.html
+++ b/demo/gantt-with-interactions.html
@@ -8,9 +8,10 @@
     <script src="../apexgantt.min.js"></script>
   </head>
   <body>
-    <div id="svg-gantt" style="margin: 0 auto; width: 90%; height: 600px"></div>
+    <div id="svg-gantt" style="margin: 0 auto"></div>
     <script>
       const ganttOptions = {
+        width: '90%',
         enableTooltip: false,
         enableTaskDrag: true,
         enableTaskEdit: true,
